# GitHubStat

./: .env  .gitignore  README.md  config.py  database.ini  main.py  pyproject.toml
src/: functions.py  postgres_db.py
